Light and Dark Mode

--- a/index.html
+++ b/index.html
@@ -38,6 +38,15 @@
     </div>
 <!-- Settings Menu -->
     <div class="settings-menu">
+<div id="dark-btn">
+    <span></span>
+</div>
+
+
+
+
+
+
         <div class="settings-menu-inner">
             <div class="user-profile">
                 <img src="https://nusaibah1.github.io/socialBookImages/images/profile-pic.png" alt="Profile Pic">
