--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <img src="https://nusaibah1.github.io/socialBookImages/images/profile-pic.png" alt="Profile Pic">
             <div>
                 <p>John Nicholas</p>
-    <a href="#">View your profile</a>
+    <a href="./html/profile.html">View your profile</a>
             </div>
             </div>
             <hr>
