--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <!-- Custom Stylesheet -->
     <link rel="stylesheet" href="./css/style.css">
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="https://nusaibah1.github.io/socialBookImages/images/FaviconLogo.png">
     <title>Social Book</title>
 </head>
 <body>
@@ -14,7 +16,9 @@
 <!-- Navigation Bar-->
  <nav>
     <div class="nav-left">
-        <img src="https://nusaibah1.github.io/socialBookImages/images/logo.png" alt="Logo" class="logo">
+        <a href="./index.html"> 
+            <img src="https://nusaibah1.github.io/socialBookImages/images/logo.png" alt="Logo" class="logo">
+        </a>
    <ul>
     <li>
        <img src="https://nusaibah1.github.io/socialBookImages/images/notification.png"> 
